# Markdown-notes-python-app

./: .env.example  .gitignore  Dockerfile  Markdown_notes_app.postman_collection.json  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
app/: main.py
app/http/: api_router.py  boot_notes.py  config.py
app/http/notes/: check_grammar.py  create_note.py  delete_note.py  get_note.py  list_notes.py  update_note.py
apps/http/: app.py  auth_middleware.py  main.py
apps/http/exceptions/: formatter.py  handler.py
apps/http/routers/: __init__.py  notes_router.py  users_router.py
apps/shared/: boot.py  dependencies.py
apps/shared/clients/: mongo.py
frontend/: index.html  script.js  styles.css
src/notes/application/: check_grammar_service.py  get_notes_by_user.py
src/notes/application/create/: create_note_service.py
src/notes/application/delete/: delete_note_service.py
src/notes/application/dto/: note_dto.py
src/notes/domain/: note.py  repository.py
src/shared/: environ.py
src/shared/domain/: exceptions.py  logger.py
src/shared/infrastructure/: logger.py
src/users/application/: login_user.py  register_user.py
src/users/domain/: user.py
tests/: README.md  conftest.py
tests/integration/: conftest.py
tests/integration/notes/: conftest.py  test_note_repository.py
tests/mock/: mother_creator.py
tests/unit/notes/: conftest.py  test_check_grammar_service.py  test_create_note_service.py  test_delete_note_service.py  test_get_note_by_id_service.py  test_list_notes_service.py  test_update_note_service.py
(+42 files in other folders)
