[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Veronica Melero <veronicamelperez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.4"}
uvicorn = "^0.32.0"
language-tool-python = "^2.8.1"
markdown = "^3.7"
motor = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
faker = "^33.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
